--- a/app/views/shared/_profile.html.erb
+++ b/app/views/shared/_profile.html.erb
@@ -10,49 +10,57 @@
       <%= avatar_image @user_data[:id], 50 %>
     </div>
     <div class="image-block-content row-fluid">
-      <div class="span6">
-        <h1>
-          <span class="hide-if-editing"><%= @user_data[:short_name] %></span>
-        </h1>
+      <h1>
+        <span class="hide-if-editing"><%= @user_data[:short_name] %></span>
+      </h1>
+      <% if @user_data[:can_edit] %>
+        <label class="show-if-editing"><%= t('name', 'Name') %>: <br><input type="text" name="user[short_name]" value="<%= @user_data[:short_name] %>" required></label>
+      <% end %>
+      <p>
+        <span class="hide-if-editing"><%= @user_data[:title] %></span>
         <% if @user_data[:can_edit] %>
-          <label class="show-if-editing"><%= t('name', 'Name') %>: <br><input type="text" name="user[short_name]" value="<%= @user_data[:short_name] %>" required></label>
+          <label class="show-if-editing"><%= t('title', 'Title') %>: <br><input type="text" name="user_profile[title]" value="<%= @user_data[:title] %>"></label>
         <% end %>
-        <p>
-          <span class="hide-if-editing"><%= @user_data[:title] %></span>
-          <% if @user_data[:can_edit] %>
-            <label class="show-if-editing"><%= t('title', 'Title') %>: <br><input type="text" name="user_profile[title]" value="<%= @user_data[:title] %>"></label>
-          <% end %>
-        </p>
-        <div class="show-if-editing">
-          <h2 class="border border-b"><%= t('#profile.ways_to_contact_me', "Ways to contact me") %></h2>
-          <% if @user_data[:user_services].present? %>
-            <ul class="social-links">
-              <li>
-                <label for="social_message" class="social message"></label>
-              </li>
-              <% @user_data[:user_services].each do |s| %>
+      </p>
+      <div class="show-if-editing edit-contact-methods">
+        <h2 class="border border-b"><%= t('#profile.ways_to_contact_me', "Ways to contact me") %></h2>
+        <% if @user_data[:user_services].present? %>
+          <div class="row-fluid">
+            <div class="span6">
+              <ul class="social-links">
                 <li>
-                  <label for="social_<%= s[:service] %>" class="social <%= s[:service] %>"><%= s[:service] %></label>
-                  <input type="hidden" value="0" name="user_services[<%= s[:service] %>">
-                  <%= check_box_tag "user_services[#{s[:service]}]", 1, s[:visible], :id => "social_#{s[:service]}" %>
+                  <label for="social_message" class="social message"></label>
                 </li>
-              <% end %>
-            </ul>
-          <% else %>
-            <p><%= t('#profile.you_have_no_services', "You haven't registered any services, you can add some on the *settings* page.", :name => @user_data[:short_name], :wrapper => link_to('\1', settings_profile_path)) %></p>
-          <% end %>
-        </div>
-        <div class="hide-if-editing">
-          <h2 class="border border-b"><%= t :ways_to_contact_user, "Ways to contact %{name}", :name => @user_data[:short_name] %></h2>
-          <ul class="social-links">
-            <li><a href="<%= message_user_path(@user) %>" class="social message">message</a></li>
-            <% if @user_data[:user_services].present? %>
-              <% @user_data[:user_services].select{|s| s[:visible] }.each do |s| %>
-                <li><a href="<%= s[:service_user_link] %>" class="social <%= s[:service] %>"><%= s[:service_name] %></a></li>
-              <% end %>
+                <% @user_data[:user_services].each do |s| %>
+                  <li>
+                    <label for="social_<%= s[:service] %>" class="social <%= s[:service] %>"><%= s[:service] %></label>
+                    <input type="hidden" value="0" name="user_services[<%= s[:service] %>">
+                    <%= check_box_tag "user_services[#{s[:service]}]", 1, s[:visible], :id => "social_#{s[:service]}" %>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+            <div class="span6 social-instructions">
+              <p>
+                <%= t(:social_instructions, "Check the contact methods you'd like to be visible to others on your profile.") %><br>
+                <%= link_to(t(:manage_settings, "Manage Registered Services"), settings_profile_path)  %>
+              </p>
+            </div>
+          </div>
+        <% else %>
+          <p><%= t('#profile.you_have_no_services', "You haven't registered any services, you can add some on the *settings* page.", :name => @user_data[:short_name], :wrapper => link_to('\1', settings_profile_path)) %></p>
+        <% end %>
+      </div>
+      <div class="hide-if-editing">
+        <h2 class="border border-b"><%= t :ways_to_contact_user, "Ways to contact %{name}", :name => @user_data[:short_name] %></h2>
+        <ul class="social-links">
+          <li><a href="<%= message_user_path(@user) %>" class="social message">message</a></li>
+          <% if @user_data[:user_services].present? %>
+            <% @user_data[:user_services].select{|s| s[:visible] }.each do |s| %>
+              <li><a href="<%= s[:service_user_link] %>" class="social <%= s[:service] %>"><%= s[:service_name] %></a></li>
             <% end %>
-          </ul>
-        </div>
+          <% end %>
+        </ul>
       </div>
     </div>
   </div>
