--- a/app/views/layouts/_foot.html.erb
+++ b/app/views/layouts/_foot.html.erb
@@ -1,5 +1,6 @@
 <script>
   window.JSON || document.write('<%= (javascript_include_tag "#{js_base_url}/vendor/json2.js").gsub("</script>", "<\\/script>") %>');
+  (''.trim && Function.prototype.bind) || document.write('<%= (javascript_include_tag "#{js_base_url}/es5_shim.js").gsub("</script>", "<\\/script>") %>');
 
   INST = <%= raw(inst_env.to_json) %>;
   ENV = <%= raw js_env.to_json %>;
