--- a/app/views/accounts/settings.html.erb
+++ b/app/views/accounts/settings.html.erb
@@ -201,6 +201,14 @@
                   <%= settings.check_box :global_includes, :checked => @account.settings[:global_includes] %>
                   <%= settings.label :global_includes, :en => "Global CSS/JavaScript includes" %>
                 </div>
+                <div>
+                  <%= settings.check_box :enable_scheduler, :checked => @account.settings[:enable_scheduler] %>
+                  <%= settings.label :enable_scheduler, :en => "Enable Calendar 2" %>
+                </div>
+                <div>
+                  <%= settings.check_box :enable_profiles, :checked => @account.settings[:enable_profiles] %>
+                  <%= settings.label :enable_profiles, :en => "Enable Profiles" %>
+                </div>
                 <% if @account.account_authorization_config %>
                   <div>
                     <%= settings.check_box :canvas_authentication, :checked => @account.canvas_authentication? %>
