--- a/app/stylesheets/jqueryui/_jquery.ui.theme.scss
+++ b/app/stylesheets/jqueryui/_jquery.ui.theme.scss
@@ -50,7 +50,7 @@
   // color: $fcHover;
 }
 .ui-state-hover a, .ui-state-hover a:hover { color: $fcHover; text-decoration: none; }
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid $borderColorActive; color: $fcActive; background: $bgColorActive;
+.ui-state-active, .ui-state-focus, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid $borderColorActive; color: $fcActive; background: $bgColorActive;
   @include vertical-gradient($gradientTopActive, $gradientBottomActive);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
